# competitive-intelligence-search

./: .env.example  .gitignore  NOTES.md  README.md  eval.json  eval2.json  pyproject.toml
src/: __init__.py  cli.py  ground_truth.py  judge.py  metrics.py  models.py  persistence.py  runner.py
src/adapters/: __init__.py  base.py  exa.py
src/engines/: __init__.py  base.py  exa.py  perplexity.py  tavily.py
